Ajustes em statics ecommerce page

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -17,6 +17,6 @@ layout: default
         Navegue pelos produtos para gerar interações e assim o sistema podera recomendar produtos para vc
     </p>
     <p>
-        <a href="/products" class="btn btn-secondary my-2">Produtos</a>
+        <a href="/products.html" class="btn btn-secondary my-2">Produtos</a>
     </p>
 </div>
