Add customers page

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -20,3 +20,6 @@ layout: default
         <a href="/products.html" class="btn btn-secondary my-2">Produtos</a>
     </p>
 </div>
+<div class="container">
+    <a href="/customers.html" class="badge badge-light">Lista de clientes </a>
+</div>
